@@ -1,7 +1,7 @@
 Package: memuse
 Type: Package
 Title: Estimate the memory usage of dense, in-core, numeric objects.
-Version: 1.1
+Version: 1.2
 Date: 2013-05-21
 Description: How much ram do you need to store a 100,000 by 100,000 matrix?
   Learn the scintillating answer to this and many more such questions with
