@@ -1,3 +1,7 @@
+2013-8-7: 
+  * Added sparse matrix handling for howbig().
+
+======================= Version 1.1 ===========================================
 2013-8-6:
   * Cleaned up the docs.
 
@@ -10,7 +14,7 @@
   * Added vignette cover.
 
 2013-8-3:
-  * Method "object_size()" now returns memuse objects.
+  * Method "object.size()" now returns memuse objects.
 
 2013-8-2:
   * Added approximate sizes for howmany() output.
@@ -20,7 +24,7 @@
 2013-7-17:
   * Fixed title.
 
-======================= Log Before Release =====================================
+======================= Log Before Release ====================================
 2013-7-16:
   * Finishing touches for CRAN.
   * Expanded package demos.
